# floppa-vpn

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  justfile  package.json  secrets.example.toml  vite.config.ts
.sqlx/: query-000fd76cd34c5d64c0255588214a29c34419d2cc53dcfe32430ef14c87fdf70e.json  query-0196eb3b7228a49ca508466db2a214e7e7c5ea7e6ec17d3f42b982873a0739e5.json  query-01c596bfdcac3ba6e9b465465f21f650c483f745852eb6023e117a2715de3481.json  query-049e843b4495dcb3a67f3e6d9746800ee0b9f0127b494e0bad040058ef2dbee7.json  query-07c47b3434b130a9ef1cc86c99582717804c7a8c85d70465081d6897091ad632.json  query-0afa08646f33fe0956c9d0062f0e7793a674ab83ee5defa07d23f0dd0f7a533f.json  query-0b769e7917091df3caf2e8f27e16a7763fd01190bb5745255a14fbf84658c982.json  query-0e5bd30a2c90535d16494c78edaa2c93c8dbdac62b10eea92b9cd385788805fe.json  query-0f1c67b41b5f19c371691005597626d5ef408e44d6d12a9d232e64b60acc27ce.json  query-0fe2f394d0284deb9250cc773b5f288ddfda0d9e912dac4bc77b466946fa7d95.json  query-1312210b030653e50b9a2c7f0e9bf1edad71b107964b87c3f834c0de47e35cf9.json  query-13681cba9a87410e49332cf021f5ceb5f9425a8ee5e7a4856a86b9b4572fd4cd.json  query-180409307c5fa8d3f940ffc320b4794ef2c717f1d2859b133ab6f3cd93cf9c7d.json  query-1b285aa959078b141e580dc84760654983fffdad4230973250d9f8c5c60ac93e.json  query-1b7cc93affb7f4e143bc231831dc5702b6557f91587f423ff35d335d6f72873f.json  query-1c3ca105b83f13c7d7bf294b3cc56ecead818b7f8cb471836267e97573fd9c3b.json  query-1d23fe64e5dfaa43c45a86eaac123a17a3416b1025961224df80c0ec29e68c6f.json  query-1f389c64c3626d08d9c4ed6eb031247e45b66d5409709ea082fc14c56d64aa34.json  query-1fa9e8058cd3f6d9a3056f69ac67588f519460c5db7e7cc86b2acda7c8461db1.json  query-20420ef8c767196dd12a249ca7138616a9c02969e64f25dc335b53e0bd67428b.json  query-2048e1c10c9f26eee7f20a831867a8ebffff5040cacab10cfd98e67ddb1e8841.json  query-211d2f8dd9c7ea75c6ec5f95ee5fe5ddb4811686f1cf3314df74f4a623d9594e.json  query-21a93390ab5da9c44412216d218b379a5dd58e00f98f1ffd4ba3df024f590741.json  query-233ba8397075560fc0ffc5c4083e61bc84b6d650e79bd8433005b7525286e553.json  query-23a176d699a4fe6472802e4318fb98e4e0da5a72ff2d2629257e0d4f3446d7dc.json  query-27063b7900158f86115df3037748d848a99c3e2ead3a5dafefe349bfce7750eb.json  query-282871655fd5741e39a8f59cd5678fe02dfe2869d6d8446f6aca2d5eaa0f597a.json  query-2976c456f5d069c78133d2851f1b77488817dfc0a1b7f2fed7c3ec7f4d3eb56e.json  query-2d6050ce10b28ac249bd6ae5127fc5cff8fbd40f674221df332d680cefe1e414.json  query-2e0637cde5e034096edf0c81d2c021c9c2d4bf17c6af4d4e6987195c5fd8ee99.json  query-2e4adc1d171a3b451bc213dfdbb58858fb4536f3e4156cfc67e5d62bafc13454.json  query-2f30958d6155a45740c3176b3816adcd8eeb8aefd9326f71f88c7cf642216240.json  query-31c92b81cf8addffca50cd42df7f2abf7da788792ab4f06693d12bd4c9dbe038.json  query-33a3d1dfc0cbb6a86cd8a1a51b4fd29d35288d8ba72bb4531c68d3282914b8f3.json  query-33e3d57c3ffe68f48dc97ea10bb63a4a01937d8bf5c822173bab29353fcfc35d.json  query-34420806d3f5723208665a795c317c9a0f18a3186fc58519697af1b48a05acae.json  query-3890c6b945de1f91182500b0ae5893ee38da8b135fe29875afe9024b9dff62a1.json  query-3bfd5325a27617f05350b4fd0dd0bcafd45b20d327c04171f0822a71b0a28468.json  query-3d0c91a1e8dea57f3dc74770411b6681430f26bbeb712b9d40365e4b5a1f0b13.json  query-3fe50cfe83f8529ad326fc649cedc034a773b2d82459767ae739d488d3f5f29d.json  (+141 more)
.zed/: settings.json
crates/floppa-core/: Cargo.toml
crates/floppa-core/src/: billing.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs  services.rs  wg_keys.rs
crates/floppa-test-tunnel/: Cargo.toml
crates/floppa-test-tunnel/src/: main.rs
docs/: DEPLOYMENT.md  LOCAL-VPN-TESTING.md  LOGGING.md  RECONNECT.md  SAFE-AREA-AND-Z-INDEX.md  VLESS-CLIENTS.md  VLESS-INTEGRATION.md
floppa-cli/: Cargo.toml
floppa-cli/src/: api.rs  auth.rs  dns.rs  main.rs  net.rs  paths.rs  reconnect.rs  service.rs  stop.rs  tunnel.rs  vless.rs
floppa-client/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json5  tauri.windows.conf.json5  windows-app.manifest
floppa-client/src-tauri/capabilities/: default.json
floppa-client/src-tauri/icons/: icon.icns
floppa-client/src-tauri/resources/linux/: dev.okhsunrog.floppa-vpn.policy  floppa-network-helper  install-polkit.sh
floppa-client/src-tauri/resources/linux/arch/: PKGBUILD  README.md
floppa-client/src-tauri/scripts/: linux-postinstall.sh  linux-postremove.sh
floppa-client/src-tauri/src/: lib.rs  logging.rs  main.rs
floppa-client/src-tauri/src/vpn/: commands.rs  config.rs  jni_entry.rs  mod.rs  protocol.rs  rpc.rs  rpc_server.rs  state.rs  tunnel.rs
floppa-client/src-tauri/src/vpn/backend/: android_ipc.rs  in_process.rs  ios.rs  mod.rs
floppa-client/src-tauri/src/vpn/platform/: android.rs  linux.rs  mod.rs  windows.rs
floppa-daemon/: Cargo.toml
floppa-daemon/src/: main.rs  sync.rs  tc.rs  wg.rs
floppa-server/: Cargo.toml  build.rs
floppa-server/src/: main.rs
floppa-server/src/admin/: auth.rs  error.rs  mod.rs  vm_client.rs
floppa-server/src/admin/routes/: admin.rs  auth.rs  mod.rs  plans.rs  user.rs
floppa-server/src/bot/: handlers.rs  i18n.rs  mod.rs  notifications.rs
floppa-vless/: Cargo.toml
floppa-vless/src/: auth.rs  config.rs  main.rs  registry.rs  stats.rs
tauri-plugin-vpn/: Cargo.toml  build.rs
tauri-plugin-vpn/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
tauri-plugin-vpn/android/src/main/: AndroidManifest.xml
tauri-plugin-vpn/android/src/main/java/dev/okhsunrog/floppavpn/vpn/: FloppaVpnService.kt  VpnPlugin.kt
tauri-plugin-vpn/permissions/: default.toml
tauri-plugin-vpn/permissions/autogenerated/: reference.md
tauri-plugin-vpn/permissions/autogenerated/commands/: are_notifications_enabled.toml  get_device_id.toml  get_device_name.toml  get_installed_apps.toml  is_battery_optimization_disabled.toml  protect_socket.toml  request_disable_battery_optimization.toml  set_status_bar_style.toml
tauri-plugin-vpn/permissions/schemas/: schema.json
tauri-plugin-vpn/src/: error.rs  lib.rs  mobile.rs  models.rs
(+170 files in other folders)
