[package]
name = "floppa-cli"
version = "0.1.0"
edition = "2024"
description = "CLI client for Floppa VPN"

[[bin]]
name = "floppa-cli"
path = "src/main.rs"

[dependencies]
gotatun = { git = "https://github.com/mullvad/gotatun", rev = "3969d36", features = ["device", "tun"] }
tun = { version = "0.8", features = ["async"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ipnetwork = "0.21"
anyhow = "1"
dirs = "6"
open = "5"
