[package]
name = "floppa-cli"
version = "0.1.0"
edition = "2024"
description = "CLI client for Floppa VPN"

[[bin]]
name = "floppa-cli"
path = "src/main.rs"

[dependencies]
gotatun = { git = "https://github.com/okhsunrog/gotatun", rev = "7005e0c", features = ["device", "tun"] }
tun = { version = "0.8", features = ["async"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ipnetwork = "0.21"
anyhow = "1"
dirs = "6"
open = "5"
shoes-lite = { git = "https://github.com/okhsunrog/shoes-lite", rev = "d2fdeb2" }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log = "0.2.0"
tracing-appender = "0.2.4"
# D-Bus (systemd-logind) for instant reconnect on system resume from sleep.
zbus = "5"
# Stream trait for the logind signal stream (zbus re-exports but doesn't expose
# the path publicly; pull the crate directly for OrderedStreamExt).
ordered-stream = "0.2"
# Uncomment for local development, comment out before commit/push:
# shoes-lite = { path = "../../rust/shoes-lite" }
