[package]
name = "floppa-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
floppa-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
anyhow.workspace = true
chrono.workspace = true
sqlx.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
