[package]
name = "floppa-server"
version.workspace = true
edition.workspace = true

[dependencies]
floppa-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
sqlx.workspace = true
base64.workspace = true
rand.workspace = true

# Telegram bot
teloxide.workspace = true

# Web server
axum.workspace = true
tower-http.workspace = true

# Auth
jsonwebtoken.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
memory-serve = "2.1.0"
form_urlencoded = "1.2.2"
semver = "1.0.27"

[build-dependencies]
chrono.workspace = true
memory-serve = "2.1.0"
