[package]
name = "floppa-vless"
version.workspace = true
edition.workspace = true

[dependencies]
floppa-core = { path = "../floppa-core" }
shoes-lite = { git = "https://github.com/okhsunrog/shoes-lite", rev = "30753c5" }
# Uncomment for local development, comment out before commit/push:
# shoes-lite = { version = "0.2.8", path = "../../../rust/shoes" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde.workspace = true
anyhow.workspace = true
base64.workspace = true

uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
subtle = "2"
dashmap = "6"
rustc-hash = "2.1.1"
toml.workspace = true
