[package]
name = "floppa-vless"
version.workspace = true
edition.workspace = true

[dependencies]
floppa-core = { path = "../floppa-core" }
shoes-lite = { git = "https://github.com/okhsunrog/shoes-lite", rev = "f8f27b2" }
# Uncomment for local development, comment out before commit/push:
# shoes-lite = { path = "../../rust/shoes-lite" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde.workspace = true
anyhow.workspace = true
base64.workspace = true

uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
subtle = "2"
dashmap = "6"
rustc-hash = "2.1.1"
toml.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
