[package]
name = "tauri-plugin-vpn"
version = "0.1.0"
authors = ["okhsunrog"]
description = "Tauri plugin for VPN functionality on mobile platforms"
edition = "2024"
license = "MIT"
links = "tauri-plugin-vpn"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
