[package]
name = "floppa-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
base64.workspace = true
rand.workspace = true
toml.workspace = true
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
