[package]
name = "floppa-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
toml.workspace = true
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ipnetwork = "0.21.1"
veil = "0.3.0"
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
