[package]
name = "floppa-test-tunnel"
version = "0.1.0"
edition = "2024"
description = "Minimal gotatun WireGuard tunnel for integration testing"

[[bin]]
name = "floppa-test-tunnel"
path = "src/main.rs"

[dependencies]
gotatun = { git = "https://github.com/mullvad/gotatun", rev = "3969d36", features = ["device", "tun"] }
tun = { version = "0.8", features = ["async"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
ipnetwork = "0.21"
